--- a/windows/PhotobookNet/ColorScheme.xaml
+++ b/windows/PhotobookNet/ColorScheme.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:PhotobookNet">
+                    xmlns:local="using:PhotobookNet"
+                    xmlns:controls="using:Microsoft.UI.Xaml.Controls">
     <Color x:Key="PrimaryColor">#1A2224</Color>
     <Color x:Key="BorderColor">#09191D</Color>
     <Color x:Key="ButtonBackgroundColor">#374346</Color>
