--- a/windows/PhotobookNet/TableContentPage.xaml
+++ b/windows/PhotobookNet/TableContentPage.xaml
@@ -283,8 +283,13 @@
                                 Grid.Row="0"
                                 Grid.Column="0">
                             <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="12*" />
+                                    <RowDefinition Height="1*" />
+                                </Grid.RowDefinitions>
                                 <controls:GridView x:Name="CollageTemplatesListView"
-                                                   IsItemClickEnabled="True">
+                                                   IsItemClickEnabled="True"
+                                                   Grid.Row="0">
                                     <controls:GridView.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <ItemsWrapGrid Orientation="Horizontal" />
@@ -297,37 +302,39 @@
                                                     Width="124"
                                                     Height="87">
                                                 <Grid>
-                                                    <Image 
-                                                        x:Name="CollageTemplateImage"
-                                                        Source="{Binding}" />
-                                                    <Grid>
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="1*" />
-                                                            <ColumnDefinition Width="1*" />
-                                                        </Grid.ColumnDefinitions>
-                                                        <Button Grid.Column="0"
-                                                                Background="{StaticResource ButtonBackgroundColor}"
-                                                                CornerRadius="4"
-                                                                Content="Preview"
-                                                                x:Name="PreviewCollage"
-                                                                Foreground="{StaticResource MainFontColor}"
-                                                                VerticalAlignment="Bottom"
-                                                                HorizontalAlignment="Left"
-                                                                />
-                                                        <Button Grid.Column="1"
-                                                                Background="{StaticResource ButtonBackgroundColor}"
-                                                                CornerRadius="4"
-                                                                Content="Make"
-                                                                x:Name="MakeCollage"
-                                                                Foreground="{StaticResource MainFontColor}"
-                                                                VerticalAlignment="Bottom"
-                                                                HorizontalAlignment="Right" />
-                                                    </Grid>
+                                                    <Image x:Name="CollageTemplateImage"
+                                                           Source="{Binding}" />
                                                 </Grid>
                                             </Border>
                                         </DataTemplate>
                                     </controls:GridView.ItemTemplate>
                                 </controls:GridView>
+                                <Grid Grid.Row="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Button Grid.Column="0"
+                                            Background="{StaticResource ButtonBackgroundColor}"
+                                            CornerRadius="4"
+                                            Content="Preview"
+                                            x:Name="PreviewCollage"
+                                            Foreground="{StaticResource MainFontColor}"
+                                            VerticalAlignment="Bottom"
+                                            HorizontalAlignment="Left" />
+                                    <Button Grid.Column="1"
+                                            Background="{StaticResource ButtonBackgroundColor}"
+                                            CornerRadius="4"
+                                            Content="Make"
+                                            x:Name="MakeCollage"
+                                            Foreground="{StaticResource MainFontColor}"
+                                            VerticalAlignment="Bottom"
+                                            HorizontalAlignment="Left" />
+                                </Grid>
                             </Grid>
                         </Border>
                     </controls:TabViewItem>
