--- a/windows/PhotobookNet/DashboardPage.xaml
+++ b/windows/PhotobookNet/DashboardPage.xaml
@@ -94,5 +94,43 @@
                 </TextBox>
             </StackPanel>
         </ContentDialog>
+        <ContentDialog Title="New Project"
+                       Foreground="{StaticResource MainFontColor}"
+                       x:Name="NewProjectDialog"
+                       Background="{StaticResource PrimaryColor}"
+                       PrimaryButtonText="Create"
+                       PrimaryButtonStyle="{StaticResource ContentDialogPrimaryButtonStyle}"
+                       CloseButtonText="Cancel"
+                       PrimaryButtonClick="OnCreateProjectDialogNext"
+                       CloseButtonClick="OnCreateProjectDialogCancel">
+            <ContentDialog.Resources>
+                <SolidColorBrush x:Key="ButtonBackground"
+                                 Color="{StaticResource ButtonBackgroundColor}" />
+                <SolidColorBrush x:Key="ButtonForeground"
+                                 Color="{StaticResource MainFontColor}" />
+            </ContentDialog.Resources>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Paper Size: "
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left" />
+                <ComboBox x:Name="ComboBoxPaperSettings"
+                          SelectedIndex="3"
+                          Grid.Column="1"
+                          HorizontalAlignment="Left">
+                    <ComboBoxItem Content="A3 Portrait" />
+                    <ComboBoxItem Content="A3 Landscape" />
+                    <ComboBoxItem Content="A4 Portrait" />
+                    <ComboBoxItem Content="A4 Landscape" />
+                    <ComboBoxItem Content="A5 Portrait" />
+                    <ComboBoxItem Content="A5 Landscape" />
+                    <ComboBoxItem Content="Square" />
+                </ComboBox>
+            </Grid>
+        </ContentDialog>
     </Grid>
 </Page>
